<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<com.google.android.material.card.MaterialCardView
    android:orientation="vertical"
    android:elevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:strokeColor="@color/app_color"
    app:strokeWidth="2dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/app_color"
            android:textColor="@color/white"
            android:text="@string/search_place_title"
            android:textAlignment="center"
            android:elevation="10dp"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/title"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/from_layout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:hint="@string/start_location"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:id="@+id/location_from"
                android:padding="10dp"
                android:focusable="false"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/destination_layout"
            android:orientation="horizontal"
            android:hint="@string/destination"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/from_layout"
            app:layout_constraintStart_toStartOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:id="@+id/location_destination"
                android:focusable="false"
                android:padding="10dp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_a_driver"
            android:layout_marginTop="20dp"
            android:id="@+id/find_driver"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/app_bar"
            app:layout_constraintTop_toBottomOf="@id/destination_layout"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView></layout>